added contact page

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "next": "13.4.4",
+    "nodemailer": "^6.9.3",
+    "nodemailer-sendinblue-transport": "^2.0.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
