--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "next": "13.4.4",
     "nodemailer": "^6.9.3",
     "nodemailer-sendinblue-transport": "^2.0.1",
+    "openai": "^3.2.1",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
+    "tmi.js": "^1.8.5",
     "typescript": "5.1.3"
   }
 }
