--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
+    "@types/tmi.js": "^1.8.3",
     "autoprefixer": "10.4.14",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
@@ -25,5 +26,10 @@
     "tailwindcss": "3.3.2",
     "tmi.js": "^1.8.5",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "eslint-plugin-node": "^11.1.0"
   }
 }
