--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^4.15.0",
     "@types/node": "20.2.5",
     "@types/passport": "^1.0.12",
     "@types/react": "18.2.8",
@@ -23,6 +24,7 @@
     "nodemailer-sendinblue-transport": "^2.0.1",
     "openai": "^3.2.1",
     "postcss": "8.4.24",
+    "prisma": "^4.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.2",
