--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-  "css.customData": ["./css-data.json"]
+  "css.customData": ["./css-data.json"],
+  "workbench.colorTheme": "dce48196-ff46-470c-b5f9-d1e23f4a79d3"
 }
