--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.134",
     "@mui/material": "^5.13.4",
     "@prisma/client": "^4.15.0",
     "@types/node": "20.2.5",
@@ -29,6 +30,8 @@
     "postcss": "8.4.24",
     "prisma": "^4.15.0",
     "react": "18.2.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "tailwindcss": "3.3.2",
