-Surrounding main page components in mui Containers. -Fetch personalities from backend

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "css.customData": ["./css-data.json"],
-  "workbench.colorTheme": "Default Light+"
+  "workbench.colorTheme": "dc8e4142-c371-4107-a3c3-99dceefadac2"
 }
