--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.4",
     "@prisma/client": "^4.15.0",
-    "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "@types/react-dom": "18.2.4",
     "@types/tmi.js": "^1.8.3",
@@ -29,12 +28,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
-    "swr": "^2.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "util": "^0.12.5"
   },
   "devDependencies": {
+    "@types/node": "^20.4.4",
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "eslint-plugin-node": "^11.1.0"
