--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "check": "npx prettier . --check",
+    "format": "npx prettier . --write"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
