--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@grpc/grpc-js": "^1.9.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.4",
     "@prisma/client": "^4.15.0",
@@ -23,6 +24,8 @@
     "chalk": "^5.3.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "google-protobuf": "^3.21.2",
+    "grpc-web": "^1.4.2",
     "next": "13.4.4",
     "nodemailer": "^6.9.3",
     "nodemailer-sendinblue-transport": "^2.0.1",
